<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="bd.ac.ruet.memorychallenge.HelpActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help"
        android:drawableLeft="@drawable/help"
        android:id="@+id/textView_h_help"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_desc"
        android:id="@+id/textView_help_des"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textColor="#021a08"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:id="@+id/imageView"
        android:layout_above="@+id/textView_help_des"
        android:layout_centerHorizontal="true"
        android:background="@drawable/pic_help"
        android:contentDescription="@string/picture_of_help_info"
        android:layout_marginBottom="25dp" />

    <Button
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:text="@string/back"
        android:id="@+id/button_back"
        android:layout_below="@+id/textView_help_des"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:onClick="onClick_helpBack"
        android:background="@drawable/btn_orange"
        android:foreground="?android:attr/selectableItemBackground"
        android:textColor="#FFFFFF" />

</RelativeLayout>
