<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="bd.ac.ruet.memorychallenge.LevelActivity"
    android:background="@drawable/level_background">

    <Button
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/level1"
        android:id="@+id/button_level1"
        android:background="@drawable/btn_pink"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_above="@+id/button_level2"
        android:layout_toLeftOf="@+id/button_level3"
        android:layout_toStartOf="@+id/button_level3"
        android:layout_marginBottom="55dp"
        android:layout_marginLeft="15dp"
        android:onClick="onClick_level1" />

    <Button
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/level2"
        android:id="@+id/button_level2"
        android:background="@drawable/btn_orange"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/button_level3"
        android:layout_toEndOf="@+id/button_level3"
        android:layout_marginRight="15dp"
        android:onClick="onClick_level2" />

    <Button
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/level3"
        android:id="@+id/button_level3"
        android:layout_marginTop="75dp"
        android:background="@drawable/btn_green"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_below="@+id/button_level2"
        android:layout_centerHorizontal="true"
        android:onClick="onClick_level3" />
</RelativeLayout>
