<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="bd.ac.ruet.memorychallenge.SplashActivity"
    android:background="#ef955a">

    <ImageView
        android:layout_width="128dp"
        android:text="@string/app_name"
        android:id="@+id/imageView_logo"
        android:textColor="#ffffff"
        android:textSize="25sp"
        android:src="@drawable/main_logo"
        android:contentDescription=""
        tools:ignore="ContentDescription"
        android:layout_height="128dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView_logo"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brain_is_loading"
        android:id="@+id/textView_loading"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView_logo_title"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintVertical_bias="0.8" />

    <TextView
        android:text="@string/game_logo_title"
        android:id="@+id/textView_logo_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/btn_gray"
        android:gravity="center"
        android:textColor="#ffffff"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="128dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="128dp"
        android:layout_marginEnd="128dp"
        android:layout_marginRight="128dp"
        android:layout_width="250dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/version_code"
        android:layout_marginTop="8dp" />

    <TextView
        android:text="@string/version_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/version_code"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView_logo"
        android:layout_marginTop="16dp" />


</android.support.constraint.ConstraintLayout>
